--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 
     <groupId>org.example</groupId>
-    <artifactId>pract</artifactId>
+    <artifactId> 9382_summer_practic_2021 </artifactId>
     <version>1.1.0</version>
     <packaging>jar</packaging>
 
