--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,20 @@
-# Уровень логирования
-log4j.rootLogger=INFO, file
+# Root logger option
+log4j.logger.APP1=DEBUG, console
+log4j.logger.APP2=DEBUG, file
+#log4j.rootCategory=DEBUG, app
 
-# Апендер для работы с файлами
+
+#log4j.appender.app=path.to.class.extending.WriterAppender
+
+# Redirect log messages to console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+
+# Redirect log messages to a log file, support file rolling.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-# Путь где будет создаваться лог файл
-log4j.appender.file.File=C:\\TMP\\log_file.log
-# Указываем максимальный размер файла с логами
-log4j.appender.file.MaxFileSize=1MB
-# Конфигурируем шаблон вывода логов в файл
+log4j.appender.file.File=chain\\log.log
+log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
